--- a/index.css
+++ b/index.css
@@ -71,13 +71,12 @@ body{
 .banner{
     display: flex;
     justify-content: space-between;
-    /* width: 100%; */
     height: 570px;
     padding-top: 215px;
 }
 
 .banner-content{
-    width: 35%;
+    max-width: 35%;
     align-items: end;
 }
 .banner-title{
@@ -100,7 +99,7 @@ body{
 }
 
 .banner-img{
-    width: 39%;
+    min-width: 37%;
 }
 
 
@@ -139,6 +138,9 @@ body{
     place-items: center;
     grid-template-columns: repeat(4, 400px);
 }
+.main-card img{
+    width: 100%;
+}
 
 .card{
     text-align: center;
@@ -170,7 +172,7 @@ body{
 
 
 .about{
-    width: 78.5%;
+    max-width: 78.5%;
     margin: 0 auto 150px;
     display: flex;
     justify-content: space-around;
@@ -179,7 +181,7 @@ body{
 
 
 .about-photos{
-    width: 50%;
+    max-width: 100%;
     position: relative;
 }
 .badge{
@@ -190,7 +192,8 @@ body{
     position: absolute;
 }
 .flower-img{
-    width: 570px;
+    /* width: 570px; */
+    max-width: 100%;
     height: 597px;
 }
 
@@ -400,7 +403,7 @@ body{
 }
 
 .footer-left{
-    width: 20%;
+    max-width: 20%;
     margin-top: -100px;
 }
 .footer-description{
@@ -442,6 +445,140 @@ body{
 
 
 
-@media only screen and (max-width: 600px) {
-  
+@media only screen and (max-width: 576px) {
+   .nav li:nth-child(1) a,
+   .nav li:nth-child(2) a,
+   .nav li:nth-child(3) a
+   {
+    display: none;
+}
+
+.banner{
+    /* display: flex; */
+    flex-direction: column-reverse;
+    /* width: 100%; */
+    /* margin-top: 500px; */
+}
+
+.banner-img img{
+    max-width: 113%;
+}
+.banner-content{
+    max-width: 110%;
+}
+
+.banner-title{
+    font-size: 32px;
+}
+
+.main-topic{
+    flex-direction: row; 
+    width: 100%;
+}
+.main-card{
+    grid-template-columns: repeat(2, 270px);
+}
+
+.card{
+    width: 85%;
+}
+
+
+
+.about{
+    display: flex;
+    margin-top: -80px;
+    flex-direction: column;
+    max-width: 100%;
+}
+.badge{
+    display: none;
+}
+
+
+.flower-img{
+    max-width: 90%;
+    margin: 0 28px 50px;
+    height: 597px;
+}
+
+
+
+.about-ours{
+    width: 100%;
+    margin-left: -20px;
+}
+.about-title{
+    margin-left: 10px;
+    font-size: 40px;
+}
+
+
+.deals-section{
+    width: 100%;
+}
+
+.deals-description{
+    width: 95%;
+}
+
+.plant-offers{
+    display: block;
+}
+
+
+.right-offer{
+    margin-top: 20px;
+    width: 100%;
+}
+.right-text{
+    left: 99px;
+    top: 70px;
+}
+.right-text h2, p{
+    font-size: 25px;
+    font-weight: 600;
+}
+
+
+
+.section{
+    width: 100%;
+}
+
+.section-title{
+    font-size: 32px;
+    font-weight: 500;
+}
+.section-text{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.footer{
+    display: grid;
+    width: 100%;
+    margin-top: -100px;
+}
+.footer-left{
+    max-width: 90%;
+    padding-left: 10px;
+    margin: 0 auto;
+}
+
+
+
+ .footer-nav ul{
+    grid-template-columns: repeat(1, 1fr);
+    margin-top: 150px;
+ }
+
+.social-link{
+    margin: 50px;
+}
+
+
+
+
+
 }
