--- a/index.css
+++ b/index.css
@@ -3,49 +3,41 @@
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
-  font-variation-settings:
-    "wdth" width;
+  font-variation-settings: "wdth" width;
 }
 
-
-
-
-
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-    padding: 0;
-    margin: 0;
-    background: #f5f8ff;
-    overflow-x: hidden;
+body {
+  padding: 0;
+  margin: 0;
+  background: #f5f8ff;
+  overflow-x: hidden;
 }
 
-
-.container{
-    width: 78.5%;
-    margin: 20px auto 150px;
-
+.container {
+  max-width: 78.5%;
+  margin: 20px auto 150px;
 }
 
-.navbar{
-    display: flex;
-    justify-content: space-between;
+.navbar {
+  display: flex;
+  justify-content: space-between;
 }
 
-
-
-.navbar .nav{
-    display: flex;
-    gap: 25px;
-    align-items: center;
+.navbar .nav {
+  display: flex;
+  gap: 25px;
+  align-items: center;
 }
-.nav li, a{
-    text-decoration: none;
-    list-style: none;
-    font-size: 20px;
-    color: #8987a1;
+.nav li,
+a {
+  text-decoration: none;
+  list-style: none;
+  font-size: 20px;
+  color: #8987a1;
 }
 .nav li:nth-child(1) a {
   color: #252432;
@@ -54,513 +46,556 @@ body{
 .nav li:nth-child(4) {
   color: #252432;
 }
-.nav li:nth-child(4) a{
-    color: #000000;
+.nav li:nth-child(4) a {
+  color: #000000;
 }
 
-
-
-
-
-.banner{
-    display: flex;
-    justify-content: space-between;
-    padding-top: 215px;
+.banner {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 215px;
 }
 
-.banner-content{
-    max-width: 35%;
+.banner-content {
+  max-width: 35%;
 }
-.banner-title{
-    font-size: 65px;
-    color: #000000;
-    font-weight: bolder;
-    font-family: Noto serif;
+.banner-title {
+  font-size: 65px;
+  color: #000000;
+  font-weight: bolder;
+  font-family: Noto serif;
 }
-.banner-title span{
-    color: #e95108;
-}
-
-.banner-description{
-    display: flex;
-    font-size: 22px;
-    color: #8987a1;
-    font-family: serif;
+.banner-title span {
+  color: #e95108;
 }
 
-
-
-
-
-.main-container{
-    width: 77.5%;
-    margin: 0 auto 250px;
-    justify-content: center;
-
+.banner-description {
+  display: flex;
+  font-size: 22px;
+  color: #8987a1;
+  font-family: serif;
 }
 
-
-.main-topic{
-    text-align: center;
-    width: 609px;
-    margin: 0 auto;
-    /* justify-content: center; */
-    /* align-items: center; */
+.container-content {
+  max-width: 78.5%;
+  margin: 150px auto 200px;
+}
+.main-title {
+  font-size: 50px;
+  font-family: Noto serif;
 }
 
-.main-title{
-    font-size: 50px;
-    font-family: Noto serif;
+.main-description {
+  color: #8987a1;
+  margin: -10px 0 0 50px;
 }
-.main-title span{
-    color: #e95108;
+.main-title span {
+  color: #e95108;
 }
-
-.main-description{
-    color: #8987a1;
-    margin-top: -30px;
+.main-text {
+  text-align: center;
+  width: 70%;
+  margin: 0 auto;
 }
-.main-card{
-    display: grid;
-    justify-content: center;
-    place-items: center;
-    grid-template-columns: repeat(4, 350px);
+.main-card {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
 }
-.main-card img{
-    width: 100%;
-}
-
-.card{
-    text-align: center;
-    margin-top: 30px;
-}
-.card h6{
-    margin-top: 15px;
-    font-size: 22px;
-}
-.card p{
-    margin-top: -35px;
-    color: #000000;
-    font-weight: 700;
-    font-size: 20px;
-}
-.card button{
-    width: 100%;
-    height: 42px;
-    border: none;
-    background: #e95108;
-    color: #f5f8ff;
-    font-size: 16px;
-    font-weight: 500;
+.main-card .card {
+  border: 1px solid rgb(232, 232, 232);
+  border-radius: 10px;
 }
 
-
-
-
-
-
-.about{
-    max-width: 78.5%;
-    margin: 0 auto 150px;
-    display: flex;
-    justify-content: space-around;
+.main-card .card img {
+  height: 310px;
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+}
+.main-card .card .btn {
+  background-color: #e95108;
+  color: #f5f8ff;
+  width: 100%;
+  height: 39px;
+  border: none;
+  border-radius: 0 0 10px 10px;
+  margin-top: 10px;
+}
+.main-card .card-body h2 {
+  margin-top: 15px;
+  font-size: 22px;
+  font-weight: 600;
+}
+.card-body p {
+  font-size: 20px;
+  font-weight: 500;
+}
+.card-bottom {
+  display: flex;
+  gap: 20px;
+  color: #161616cc;
+}
+.main-topic .card .card-body {
+  text-align: center;
 }
 
-
-
-.about-photos{
-    max-width: 100%;
-    position: relative;
-}
-.badge{
-    max-width: 286px;
-    left: 370px;
-    top: -120px;
-    position: absolute;
-}
-.flower-img{
-    max-width: 100%;
+.about {
+  max-width: 78.5%;
+  margin: 0 auto 150px;
+  display: flex;
+  justify-content: space-around;
 }
 
-
-.about-ours{
-    width: 40%;
-    padding: 20px 0 20px 20px;
+.about-photos {
+  max-width: 100%;
+  position: relative;
 }
-.about-title{
-    width: 500px;
-    margin-top: -15px;
-    font-size: 50px;
-    font-family: Noto serif;
+.badge {
+  max-width: 286px;
+  left: 370px;
+  top: -120px;
+  position: absolute;
 }
-.about-list li{
-    color: #8987a1;
-    margin: 20px 0;
-    font-size: 22px;
-    width: 500px;
+.flower-img {
+  max-width: 100%;
 }
 
-
-.deals-section{
-    width: 78.5%;
-    margin: 0 auto 150px;
+.about-ours {
+  width: 40%;
+  padding: 20px 0 20px 20px;
+}
+.about-title {
+  width: 500px;
+  margin-top: -15px;
+  font-size: 50px;
+  font-family: Noto serif;
+}
+.about-list li {
+  color: #8987a1;
+  margin: 20px 0;
+  font-size: 22px;
+  width: 500px;
 }
 
-.deals-title{
-    color: #000000;
-    text-align: center;
-    font-size: 50px;
-}
-.deals-title span{
-    color: #e95108;
-}
-.deals-description{
-    text-align: center;
-    margin: 0 auto 90px;
-    font-size: 22px;
-    width: 840px;
-    color: #8987a1;
+.deals-section {
+  width: 78.5%;
+  margin: 0 auto 150px;
 }
 
-
-
-
-
-
-
-
-
-
-
-.plant-offers{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 20px;
-    padding: 40px;
-    
+.deals-title {
+  color: #000000;
+  text-align: center;
+  font-size: 50px;
+}
+.deals-title span {
+  color: #e95108;
+}
+.deals-description {
+  text-align: center;
+  margin: 0 auto 90px;
+  font-size: 22px;
+  width: 840px;
+  color: #8987a1;
 }
 
-.left-column{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.dealer {
+  width: 70%;
+}
+.offer-deal {
+  display: grid;
+  grid-template-columns: repeat(2, 4fr);
+  gap: 10px;
+}
+.offer img {
+  width: 100%;
+  height: 200px;
+  display: block;
+  background-color: blueviolet;
+  border-radius: 10px;
+}
+.offer {
+  display: grid;
+ 
+  width: 520px;
+  margin-top: 20px;
+
+  position: relative;
+}
+.deal-text {
+  position: absolute;
+  z-index: 5;
+
+  text-align: center;
+  color: #f5f8ff;
+
+  z-index: 5;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.plant-offer {
+  position: relative;
+  margin-top: 20px;
 }
 
-.offer-box{
-    position: relative;
-}
-.offer-box img{
-    width: 100%;
-    height: 100%;
-    display: block;
-    border-radius: 12px;
+.deal-right img {
+  width: 100%;
+  border-radius: 10px;
+  height: 420px;
+  display: block;
 }
 
-.offer-box::after{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.5);
-    border-radius: 18px;
-}
-.offer-text{
-    position: absolute;
-    bottom: 80px;
-    color: #f5f8ff;
-    left: 120px;
-    z-index: 5;
-}
-.offer-text h3{
-    font-size: 20px;
-    font-weight: 700;
-    
-}
+.offer::after {
+  content: "";
 
-.offer-text p{
-    margin: 3px 0 0 60px;
-    font-weight: 600;
-    text-underline-offset: 5px;
-    text-decoration: underline;
-    cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  position: absolute;
 }
-
-
-.right-offer{
-    position: relative;
+.deal-text h3 {
+  font-size: 20px;
+  font-weight: 600;
 }
-.right-offer::after{
-    content: "";
-    border-radius: 18px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.5);
-    position: absolute;
-
+.plant-offer {
+  width: 900px;
 }
-.right-offer img{
-    width: 100%;
-    height: 100%;
-    border-radius: 16px;
-    display: block;
+.deal-text p {
+  font-size: 18px;
+  text-underline-offset: 5px;
+  margin-top: 10px;
+  font-weight: 600;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.deal-right h3 {
+  font-size: 28px;
+  font-weight: 700;
 }
 
-.right-text{
-    position: absolute;
-    top: 40%;
-    left: 35%;
-    z-index: 1;
-    color: #f5f8ff;
-    text-align: center;
+.deal-right::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.4);
+  position: absolute;
 }
 
-.right-text h2{
-    font-size: 28px;
-    font-weight: 800;
-}
-.right-text p{
-    font-size: 18px;
-    text-underline-offset: 5px;
-    margin-top: 10px;
-    font-weight: 600;
-    text-decoration: underline;
-    cursor: pointer;
+.section {
+  width: 100%;
+  height: 700px;
+  background-image: url(assets/news-letter-bg.png);
+  background-size: cover;
+  margin-bottom: 150px;
 }
 
-
-.section{
-    width: 100%;
-    height: 700px;
-    background-image: url(assets/news-letter-bg.png);
-    background-size: cover;
-    margin-bottom: 150px;
-    
+.section-title {
+  color: #f5f8ff;
+  text-align: center;
+  font-size: 50px;
+  font-weight: 600;
+  padding-top: 220px;
 }
 
-.section-title{
-    color: #f5f8ff;
-    text-align: center;
-    font-size: 50px;
-    font-weight: 600;
-    padding-top: 220px;
+.section-text {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+.section-text input {
+  width: 644px;
+  height: 50px;
+  border: none;
+  padding-left: 20px;
+  border-radius: 5px 0px 0px 5px;
 }
 
-.section-text{
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-.section-text input{
-    width: 644px;
-    height: 50px;
-    border: none;
-    padding-left: 20px;
-    border-radius: 5px 0px 0px 5px;
+.section-btn {
+  border: none;
+  background: #e95108;
+  width: 200px;
+  height: 50px;
+  color: #f5f8ff;
+
+  border-radius: 0px 5px 5px 0px;
 }
 
-.section-btn{
-    border: none;
-    background: #e95108;
-    width: 200px;
-    height: 50px;
-    color: #f5f8ff;
-    
-    border-radius: 0px 5px 5px 0px;
+.footer {
+  display: flex;
+  justify-content: space-around;
 }
 
-
-
-
-
-
-.footer{
-    display: flex;
-    justify-content: space-around;
+.footer-left {
+  max-width: 20%;
+  margin-top: -100px;
+}
+.footer-description {
+  font-size: 22px;
+  color: #8987a1;
 }
 
-.footer-left{
-    max-width: 20%;
-    margin-top: -100px;
+.footer-nav {
+  width: 30%;
+  margin-top: -100px;
 }
-.footer-description{
-    font-size: 22px;
-    color: #8987a1;
+.footer-nav ul {
+  display: grid;
+  color: #8987a1;
+  gap: 27px;
+  grid-template-columns: repeat(2, 200px);
 }
-
-.footer-nav{
-    width: 30%;
-    margin-top: -100px;
-}
-.footer-nav ul{
-    display: grid;
-    color: #8987a1;
-    gap: 27px;
-    grid-template-columns: repeat(2, 200px);
-}
-.footer-nav li{
-    list-style: none;
-    cursor: pointer;
+.footer-nav li {
+  list-style: none;
+  cursor: pointer;
 }
 
-
-.social-link{
-    display: flex;
-    margin-top: -90px;
-    gap: 35px;
+.social-link {
+  display: flex;
+  margin-top: -90px;
+  gap: 35px;
 }
-.social-link img{
-    cursor: pointer;
-    width: 30px;
-    height: 30px;
+.social-link img {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
 }
-
-
-
-
-
-
-
 
 @media only screen and (max-width: 576px) {
-   .nav li:nth-child(1) a,
-   .nav li:nth-child(2) a,
-   .nav li:nth-child(3) a
-   {
+  .nav li:nth-child(1) a,
+  .nav li:nth-child(2) a,
+  .nav li:nth-child(3) a {
     display: none;
-}
+  }
 
-.banner{
-    /* display: flex; */
+  .banner {
     flex-direction: column-reverse;
-    /* width: 100%; */
-    /* margin-top: 500px; */
-}
+  }
 
-.banner-img img{
-    max-width: 113%;
-}
-.banner-content{
-    max-width: 110%;
-}
+  
+  .banner-content {
+    max-width: 97%;
+  }
 
-.banner-title{
+  .banner-title {
     font-size: 32px;
-}
+  }
 
-.main-topic{
-    flex-direction: row; 
+  .main-card {
+    margin-top: 50px;
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    margin-left: -15px;
+  }
+  .card {
+    width: 210px;
+    margin-left: -5px;
+  }
+  .main-text {
     width: 100%;
-}
-.main-card{
-    grid-template-columns: repeat(2, 270px);
-}
+    text-align: center;
+    margin-left: -29px;
+  }
+  .main-text h2 {
+    font-size: 40px;
+    margin-left: 60px;
+  }
+  .main-card .card img {
+    height: 210px;
+  }
 
-.card{
-    width: 85%;
-}
-
-
-
-.about{
+  .about {
     display: flex;
     margin-top: -80px;
     flex-direction: column;
     max-width: 100%;
-}
-.badge{
+  }
+
+  .badge {
     display: none;
-}
+  }
 
-
-.flower-img{
+  .flower-img {
     max-width: 90%;
     margin: 0 28px 50px;
     height: 597px;
-}
+  }
 
-
-
-.about-ours{
+  .about-ours {
     width: 100%;
     margin-left: -20px;
-}
-.about-title{
+  }
+  .about-title {
     margin-left: 10px;
     font-size: 40px;
-}
-
-
-.deals-section{
+  }
+  .about-list li {
+    padding-right: 55px;
+  }
+  .deals-section {
     width: 100%;
-}
+  }
 
-.deals-description{
+  .deals-description {
     width: 95%;
-}
+  }
 
-.plant-offers{
+  .plant-offers {
     display: block;
-}
+  }
 
-
-.right-offer{
+  .right-offer {
     margin-top: 20px;
     width: 100%;
-}
-.right-text{
-    left: 99px;
-    top: 70px;
-}
-.right-text h2, p{
+  }
+  .offer-text {
+    right: 19%;
+    top: 30%;
+  }
+  .right-text {
+    left: 30%;
+    top: 30%;
+  }
+  .right-text h2,
+  p {
     font-size: 25px;
     font-weight: 600;
+  }
+.offer-deal{
+  display: grid;
+  width: 100%;
+  flex-direction: column;
 }
-
-
-
-.section{
+  .section {
     width: 100%;
-}
+  }
 
-.section-title{
+  .section-title {
     font-size: 32px;
     font-weight: 500;
-}
-.section-text{
+  }
+  .section-text {
     width: 80%;
     margin: 0 auto;
-}
+  }
 
-.footer{
+  .footer {
     display: grid;
     width: 100%;
     margin-top: -100px;
-}
-.footer-left{
+  }
+  .footer-left {
     max-width: 90%;
     padding-left: 10px;
     margin: 0 auto;
-}
+  }
 
-
-
- .footer-nav ul{
+  .footer-nav ul {
     grid-template-columns: repeat(1, 1fr);
     margin-top: 150px;
- }
+  }
 
-.social-link{
+  .social-link {
     margin: 50px;
+  }
 }
 
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.offer-deal {
+  display: grid;
+  grid-template-columns: repeat(2, 4fr);
+  gap: 10px;
+}
+.offer img {
+  width: 100%;
+  height: 300px;
+  display: block;
+  background-color: blueviolet;
+  border-radius: 10px;
+}
+.offer {
+  display: grid;
+  /* gap: 120px; */
+  margin-top: 20px;
 
+  position: relative;
+}
+.dealer{
+  margin: 10px;
+}
 
+.deal-right h3 {
+  font-size: 20px;
+  font-weight: 500;
+}
+.deal-text {
+  position: absolute;
+  z-index: 5;
 
+  text-align: center;
+  color: #f5f8ff;
 
+  z-index: 5;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.plant-offer {
+  width: 96%;
+
+  height: 300px;
+  overflow: hidden;
+  position: relative;
+
+  margin: 0 10px;
+}
+
+.deal-right img {
+  width: 100%;
+  border-radius: 10px;
+  height: 420px;
+  display: block;
+}
+
+.offer::after {
+  content: "";
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  position: absolute;
+}
+
+.deal-right::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  position: absolute;
 }
